--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
               </div>
               <div class="hero-graphic">
-                <img src="/assets/hero.png" alt="" />
+                <img src="/assets/hero.webp" alt="" />
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
               </div>
               <div class="services-graphic">
                 <img
-                  src="/assets/services-window-cleaning.jpeg"
+                  src="/assets/services-window-cleaning.webp"
                   alt="Window Cleaning"
                 />
               </div>
@@ -204,7 +204,7 @@
               </div>
               <div class="services-graphic">
                 <img
-                  src="/assets/services-pressure-washing.jpeg"
+                  src="/assets/services-pressure-washing.webp"
                   alt="Window Cleaning"
                 />
               </div>
@@ -240,7 +240,7 @@
               </div>
               <div class="services-graphic">
                 <img
-                  src="/assets/services-gutter-cleaning.jpeg"
+                  src="/assets/services-gutter-cleaning.webp"
                   alt="Window Cleaning"
                 />
               </div>
@@ -275,7 +275,7 @@
               </div>
               <div class="services-graphic">
                 <img
-                  src="/assets/services-house-keeping.jpeg"
+                  src="/assets/services-house-keeping.webp"
                   alt="Window Cleaning"
                 />
               </div>
@@ -320,7 +320,7 @@
       <section id="about" class="about-us-section">
         <div class="about-us-section-container">
           <div class="about-us-graphic">
-            <img src="/assets/about-us.jpeg" alt="About Us Graphic" />
+            <img src="/assets/about-us.webp" alt="About Us Graphic" />
           </div>
           <div class="about-us-copy">
             <p class="featured-text">— About Us —</p>
