--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           </div>
         </div>
       </section>
-      <section id="testimonials" class="testimonials-section">
+      <!-- <section id="testimonials" class="testimonials-section">
         <div class="testimonials-section-container">
           <div class="testimonials-copy">
             <h2>
@@ -586,7 +586,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="contact" class="contact-section">
         <div class="contact-section-container">
           <div class="contact-copy--parent">
@@ -691,7 +691,7 @@
                   <a href="mailto:info@apexwindowguttercleaning.com"
                     >info@apexwindowguttercleaning.com</a
                   >
-                  or <a href="tel:+15513309047">+1 551 330 9047</a>
+                  or <a href="tel:+15503132211">+1 550 313 2211</a>
                   <br />
                   In addition, we can also be reached through these other
                   convenient methods for getting in touch with us.
@@ -699,7 +699,7 @@
               </div>
               <ul class="contact-info-list">
                 <li>
-                  <a href="tel:+15513309047">
+                  <a href="tel:+15503132211">
                     <div class="contact-info-list-icon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -712,7 +712,7 @@
                         />
                       </svg>
                     </div>
-                    <p>+1 551 330 9047</p>
+                    <p>+1 550 313 2211</p>
                   </a>
                 </li>
                 <li>
@@ -746,11 +746,7 @@
                         />
                       </svg>
                     </div>
-                    <p>
-                      20 Independent Avenue<br />
-                      Sab Pedro CA 09078<br />
-                      California
-                    </p>
+                    <p>92 Knickerbocker rd Englewood NJ</p>
                   </a>
                 </li>
               </ul>
@@ -957,7 +953,7 @@
             </ul>
           </div>
           <div class="faqs-cta cta-primary">
-            <a href="#!"
+            <a href="#contact"
               >Get Started<svg
                 clip-rule="evenodd"
                 fill-rule="evenodd"
@@ -982,11 +978,7 @@
               <div class="footer-info-links-col">
                 <h6>Office</h6>
                 <ul>
-                  <li>
-                    20 Independent Avenue<br />
-                    Sab Pedro CA 09078<br />
-                    California
-                  </li>
+                  <li>92 Knickerbocker rd Englewood NJ</li>
                 </ul>
               </div>
               <div class="footer-info-links-col">
@@ -997,7 +989,7 @@
                       >info@apexwindowguttercleaning.com</a
                     >
                   </li>
-                  <li><a href="tel:+15513309047">+1 551 330 9047</a></li>
+                  <li><a href="tel:+15503132211">+1 550 313 2211</a></li>
                 </ul>
               </div>
             </div>
